--- a/client/index.html
+++ b/client/index.html
@@ -6,18 +6,24 @@
   <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div id="main"></div>
   <script>
-    $(document).ready(function() {
-      $.ajax({
-        type: "GET",
-        url: "/sentence",
-        success: function(data) {
-          console.log(data);
-          $('#main').append('<p>' + data + '</p>');
-        }
-      })
-    });
+  var nlpGet = function() {
+    var inputEl = document.getElementById('in');
+    var sentence = inputEl.value;
+    $.ajax({
+      type: "GET",
+      url: "/sentence",
+      data: {input: sentence},
+      success: function(data) {
+        console.log(data);
+        $('#main').append('<p>' + JSON.stringify(data) + '</p>');
+      }
+    })
+  }
   </script>
+  <div>
+    <input type="text" id="in" onchange="nlpGet()">
+  </div>
+  <div id="main"></div>
 </body>
 </html>
