<sickify>(client): setup buttons for each call {bank}

--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,9 @@
   }
   </script>
   <div>
-    <input type="text" id="in" onchange="countGet()">
+    <input type="text" id="in">
+    <button id="nlpButton" onclick="nlpGet()">standard nlp</button>
+    <button id="countGet" onclick="countGet()">word count</button>
   </div>
   <div id="main"></div>
 </body>
