<sickify>(client): make button and call to server {woot}

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,20 @@
     })
   }
 
+  var partsGet = function() {
+    var inputEl = document.getElementById('in');
+    var sentence = inputEl.value;
+    $.ajax({
+      type: "GET",
+      url: "/partsOfSpeech",
+      data: {input: sentence},
+      success: function(data) {
+        console.log(data);
+        $('#main').append('<p>' + JSON.stringify(data) + '</p>');
+      }
+    })
+  }
+
   var countGet = function() {
     var inputEl = document.getElementById('in');
     var sentence = inputEl.value;
@@ -38,6 +52,7 @@
   <div>
     <input type="text" id="in">
     <button id="nlpButton" onclick="nlpGet()">standard nlp</button>
+    <button id="partsGet" onclick="partsGet()">parts of speech</button>
     <button id="countGet" onclick="countGet()">word count</button>
   </div>
   <div id="main"></div>
