<sickify>(client): pull out GETs into app {slick}

--- a/client/index.html
+++ b/client/index.html
@@ -4,65 +4,9 @@
   <meta charset="UTF-8">
   <title>Verbiage</title>
   <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
 </head>
 <body>
-  <script>
-  var nlpGet = function() {
-    var inputEl = document.getElementById('in');
-    var sentence = inputEl.value;
-    $.ajax({
-      type: "GET",
-      url: "/sentence",
-      data: {input: sentence},
-      success: function(data) {
-        console.log(data);
-        $('#main').append('<p>' + JSON.stringify(data) + '</p>');
-      }
-    })
-  }
-
-  var partsGet = function() {
-    var inputEl = document.getElementById('in');
-    var sentence = inputEl.value;
-    $.ajax({
-      type: "GET",
-      url: "/partsOfSpeech",
-      data: {input: sentence},
-      success: function(data) {
-        console.log(data);
-        $('#main').append('<p>' + JSON.stringify(data) + '</p>');
-      }
-    })
-  }
-
-  var partsCounter = function() {
-    var inputEl = document.getElementById('in');
-    var sentence = inputEl.value;
-    $.ajax({
-      type: "GET",
-      url: "/partsCounter",
-      data: {input: sentence},
-      success: function(data) {
-        console.log(data);
-        $('#main').append('<p>' + JSON.stringify(data) + '</p>');
-      }
-    })
-  }
-
-  var countGet = function() {
-    var inputEl = document.getElementById('in');
-    var sentence = inputEl.value;
-    $.ajax({
-      type: "GET",
-      url: "/counter",
-      data: {input: sentence},
-      success: function(data) {
-        console.log(data);
-        $('#main').append('<p>' + JSON.stringify(data) + '</p>');
-      }
-    })
-  }
-  </script>
   <div>
     <input type="text" id="in">
     <button id="nlpButton" onclick="nlpGet()">standard nlp</button>
