--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
   <script src="ajaxApp.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.4.0/d3.js"></script>
+  <script src="app.js"></script>
+  <script src="services.js"></script>
 
   </script>
 </head>
