<sickify>(client): link bootstrap {strapped}

--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.4.0/d3.js"></script>
   <script src="app.js"></script>
   <script src="services.js"></script>
-
-  </script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
 </head>
 <body>
   <div>
