--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.4.0/d3.js"></script>
   <script src="app.js"></script>
   <script src="services.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css"></link>
 </head>
 <body>
+  <div>
+    <h1>Verbiage</h1>
+  </div>
   <div>
     <input type="text" id="in">
     <button id="partsGet" onclick="partsGet()">parts of speech</button>
