<sickify>(client): switch parts count and parts speech, also added button style {slick}

--- a/client/index.html
+++ b/client/index.html
@@ -18,9 +18,9 @@
   </div>
   <div>
     <input type="text" id="in">
-    <button id="partsGet" onclick="partsGet()">parts of speech</button>
-    <button id="partsCounter" onclick="partsCounter()">parts counter</button>
-    <button id="countGet" onclick="countGet()">word count</button>
+    <button id="partsCounter" class="btn btn-info" onclick="partsCounter()">parts counter</button>
+    <button id="partsGet" class="btn btn-info" onclick="partsGet()">parts of speech</button>
+    <button id="countGet" class="btn btn-info" onclick="countGet()">word count</button>
   </div>
   <div id="main"></div>
 </body>
