<sickify>(client):update index sections {meh}

--- a/client/index.html
+++ b/client/index.html
@@ -16,12 +16,13 @@
   <div>
     <h1>Verbiage</h1>
   </div>
-  <div>
+  <div class="jumbotron">
     <input type="text" id="in">
     <button id="partsCounter" class="btn btn-info" onclick="partsCounter()">parts counter</button>
     <button id="partsGet" class="btn btn-info" onclick="partsGet()">parts of speech</button>
     <button id="countGet" class="btn btn-info" onclick="countGet()">word count</button>
+    <div id="main"></div>
   </div>
-  <div id="main"></div>
+  </div>
 </body>
 </html>
