<sickify>(client): create two wells for the results {meh}

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,8 @@
     <button id="partsCounter" class="btn btn-info" onclick="partsCounter()">parts counter</button>
     <button id="partsGet" class="btn btn-info" onclick="partsGet()">parts of speech</button>
     <button id="countGet" class="btn btn-info" onclick="countGet()">word count</button>
-    <div id="main"></div>
+    <div class="well" id="main"></div>
+    <div class="well" id="v"></div>
   </div>
   </div>
 </body>
