--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
 <body>
   <div>
     <h1>Verbiage</h1>
+    <h2>it's my fucking bday</h2>
   </div>
   <div class="jumbotron">
     <input type="text" id="in">
